--- a/src/assets/scss/settings/base/_colors.scss
+++ b/src/assets/scss/settings/base/_colors.scss
@@ -3,7 +3,8 @@
 // The color palette
 $palette: (
 	light: (
-		1: #ECEDED,
+		// 1: #ECEDED,
+    1: #FFFFFF,
 		2: #9CA9B3,
 		3: #717D86
 	),
@@ -32,23 +33,42 @@ $palette: (
 );
 
 // Base typography: color
+// $color: (
+// 	heading:				get-color(light, 1),
+// 	base: 					get-color(light, 2),
+// 	high-contrast: 			get-color(light, 1),
+// 	mid-contrast: 			get-color(light, 2),
+// 	low-contrast: 			get-color(light, 3),
+// 	primary:				get-color(primary, 3),
+// 	secondary:				get-color(secondary, 1),
+// 	error:					get-color(alert, error),
+// 	warning:				get-color(alert, warning),
+// 	success:				get-color(alert, success),
+// 	// ↓ Inverted colors
+// 	heading-inverse:		get-color(dark, 1),
+// 	base-inverse:			get-color(light, 3),
+// 	high-contrast-inverse: 	get-color(dark, 1),
+// 	mid-contrast-inverse: 	get-color(dark, 2),
+// 	low-contrast-inverse: 	get-color(light, 3)
+// );
+
 $color: (
-	heading:				get-color(light, 1),
-	base: 					get-color(light, 2),
-	high-contrast: 			get-color(light, 1),
-	mid-contrast: 			get-color(light, 2),
-	low-contrast: 			get-color(light, 3),
-	primary:				get-color(primary, 3),
-	secondary:				get-color(secondary, 1),
-	error:					get-color(alert, error),
-	warning:				get-color(alert, warning),
-	success:				get-color(alert, success),
-	// ↓ Inverted colors
-	heading-inverse:		get-color(dark, 1),
-	base-inverse:			get-color(light, 3),
-	high-contrast-inverse: 	get-color(dark, 1),
-	mid-contrast-inverse: 	get-color(dark, 2),
-	low-contrast-inverse: 	get-color(light, 3)
+  heading:        get-color(dark, 1),
+  base:           get-color(dark, 2),
+  high-contrast:      get-color(dark, 1),
+  mid-contrast:       get-color(dark, 2),
+  low-contrast:       get-color(dark, 3),
+  primary:        get-color(primary, 1),
+  secondary:        get-color(secondary, 1),
+  error:          get-color(alert, error),
+  warning:        get-color(alert, warning),
+  success:        get-color(alert, success),
+  // ↓ Inverted colors
+  heading-inverse:    get-color(light, 1),
+  base-inverse:     get-color(dark, 3),
+  high-contrast-inverse:  get-color(light, 1),
+  mid-contrast-inverse:   get-color(light, 2),
+  low-contrast-inverse:   get-color(dark, 3)
 );
 
 // Borders and dividers: color
@@ -74,12 +94,22 @@ $icon--color: (
 );
 
 // Misc elements: background color
+// $bg--color: (
+// 	body: 			get-color(dark, 1),
+// 	body-shadow:	0 20px 48px rgba(get-color(dark, 1), .8),	// body shadow when a boxed layout is used (set to null if don't want a shadow)
+// 	body-outer:		lighten(get-color(dark, 1), 2%),			// outer bg color when a boxed layout is used
+// 	bg-color: 		lighten(get-color(light, 1), 9%),			// .has-bg-color helper class
+// 	shadow: 		0 24px 64px rgba(get-color(dark, 1), .64),	// .has-shadow helper class
+// 	code: 			darken(get-color(dark, 1), 3%),
+// 	code-inverse:	darken(get-color(dark, 1), 3%)
+// );
+
 $bg--color: (
-	body: 			get-color(dark, 1),
-	body-shadow:	0 20px 48px rgba(get-color(dark, 1), .8),	// body shadow when a boxed layout is used (set to null if don't want a shadow)
-	body-outer:		lighten(get-color(dark, 1), 2%),			// outer bg color when a boxed layout is used
-	bg-color: 		lighten(get-color(light, 1), 9%),			// .has-bg-color helper class
-	shadow: 		0 24px 64px rgba(get-color(dark, 1), .64),	// .has-shadow helper class
-	code: 			darken(get-color(dark, 1), 3%),
-	code-inverse:	darken(get-color(dark, 1), 3%)
+  body:       get-color(light, 1),
+  body-shadow:  0 20px 48px rgba(get-color(light, 1), .8), // body shadow when a boxed layout is used (set to null if don't want a shadow)
+  body-outer:   lighten(get-color(light, 1), 2%),      // outer bg color when a boxed layout is used
+  bg-color:     lighten(get-color(dark, 1), 9%),     // .has-bg-color helper class
+  shadow:     0 24px 64px rgba(get-color(light, 1), .64),  // .has-shadow helper class
+  code:       darken(get-color(light, 1), 3%),
+  code-inverse: darken(get-color(light, 1), 3%)
 );
