First website version

--- a/src/assets/scss/settings/base/_colors.scss
+++ b/src/assets/scss/settings/base/_colors.scss
@@ -14,10 +14,10 @@ $palette: (
 		3: #33363A
 	),
 	primary: (
-		1: #6163FF,
-		2: #ACADFF,
-		3: #5658DD,
-		4: #E9E9FF
+		1: #15c39a,
+		2: #63D5B9,
+		3: #15c39a,
+		4: #63D5B9
  	),
 	secondary: (
 		1: #24E5AF,
